# kokkos

./: CMakeLists.txt  FindKokkos.ipynb  LICENSE  custom.css  index.html  results.copy_stats.csv  results.db  results.hip_stats.csv  results.json  results.stats.csv  results.sysinfo.txt
.github/workflows/: releases.yml
algorithms/unit_tests/: TestSort.hpp  TestStdAlgorithmsAdjacentFind.cpp  TestStdAlgorithmsAllAnyNoneOf.cpp  TestStdAlgorithmsFind.cpp  TestStdAlgorithmsFindEnd.cpp  TestStdAlgorithmsFindFirstOf.cpp  TestStdAlgorithmsIsSortedUntil.cpp  TestStdAlgorithmsLexicographicalCompare.cpp  TestStdAlgorithmsMismatch.cpp  TestStdAlgorithmsPartitioningOps.cpp  TestStdAlgorithmsSearch.cpp  TestStdAlgorithmsSearch_n.cpp
benchmarks/latency/: CMakeLists.txt  latency_bench.cpp
benchmarks/zero_initialization/: CMakeLists.txt  zero_init_bench.cpp
containers/performance_tests/: TestCuda.cpp
containers/unit_tests/: TestBitset.hpp  TestUnorderedMap.hpp
core/src/: Kokkos_Core.hpp  Kokkos_HPX.hpp  Kokkos_MasterLock.hpp  Kokkos_OpenACC.hpp  Kokkos_OpenACCSpace.hpp  Kokkos_Threads.hpp
core/src/Cuda/: Kokkos_Cuda_Half_Conversion.hpp  Kokkos_Cuda_Instance.cpp  Kokkos_Cuda_Instance.hpp  Kokkos_Cuda_Locks.cpp  Kokkos_Cuda_Parallel_Team.hpp
core/src/HIP/: Kokkos_HIP.cpp  Kokkos_HIP.hpp  Kokkos_HIP_Instance.cpp  Kokkos_HIP_Instance.hpp  Kokkos_HIP_Locks.cpp  Kokkos_HIP_Parallel_Team.hpp  Kokkos_HIP_ReduceScan.hpp  Kokkos_HIP_Team.hpp
core/src/HPX/: Kokkos_HPX_Task.hpp  Kokkos_HPX_WorkGraphPolicy.hpp
core/src/OpenACC/: Kokkos_OpenACC.cpp  Kokkos_OpenACC.hpp  Kokkos_OpenACCSpace.cpp  Kokkos_OpenACC_Instance.cpp
core/src/Threads/: Kokkos_ThreadsExec.cpp  Kokkos_ThreadsTeam.hpp
core/src/ext/simd/: avx.hpp  avx512.hpp  cuda_warp.hpp  hip_wavefront.hpp  neon.hpp  pack.hpp  scalar.hpp  simd.hpp  simd_common.hpp  sse.hpp  test.cpp  vector_size.hpp  vsx.hpp
core/src/impl/: Kokkos_Command_Line_Parsing.cpp  Kokkos_Core.cpp
core/unit_test/: CMakeLists.txt  FloatingPointComparison.hpp  TestJoinBackwardCompatibility.hpp  TestMathematicalFunctions.hpp  TestTeamVector.hpp  TestTeamVectorRange.hpp
core/unit_test/cuda/: TestCuda_Spaces.cpp
core/unit_test/default/: TestDefaultDeviceDevelop.cpp
docker/: CMakeLists.txt  Dockerfile  Dockerfile_cmake  Dockerfile_gmake  Dockerfile_tribits  FindKokkos.cmake  build.sh  configure_cmake.sh  configure_gmake.sh  convert.sh  docker-compose.yml  jupyter_nbconvert_config.py  jupyter_notebook_config.py
